{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 18,
  "lineage": "909130c4-c9f5-05d2-2157-ae46bd144f7e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:internet-gateway/igw-0cb4b52408c3b849f",
            "id": "igw-0cb4b52408c3b849f",
            "owner_id": "934545598565",
            "region": "ap-south-1",
            "tags": {
              "Name": "Internet Gateway"
            },
            "tags_all": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-008b36a5a14887833"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:route-table/rtb-01fa641cbc54766a2",
            "id": "rtb-01fa641cbc54766a2",
            "owner_id": "934545598565",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb4b52408c3b849f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table PR"
            },
            "tags_all": {
              "Name": "Route Table PR"
            },
            "timeouts": null,
            "vpc_id": "vpc-008b36a5a14887833"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.prod_IGW",
            "aws_vpc.prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_RT_ASSOCIATION",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07197505b1a9c75f1",
            "region": "ap-south-1",
            "route_table_id": "rtb-01fa641cbc54766a2",
            "subnet_id": "subnet-026bb03e466ed3dfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.prod_IGW",
            "aws_route_table.prod_RT",
            "aws_subnet.prod_subnet",
            "aws_vpc.prod_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c431952a8e2c270",
            "region": "ap-south-1",
            "route_table_id": "rtb-01fa641cbc54766a2",
            "subnet_id": "subnet-0fa5739cf91873faf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.prod_IGW",
            "aws_route_table.prod_RT",
            "aws_subnet.prod_subnet",
            "aws_vpc.prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PROD_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:security-group/sg-0e7a12ae850ca8cf5",
            "description": "Allow Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7a12ae850ca8cf5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound_ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DUMMY PROD SG",
            "name_prefix": "",
            "owner_id": "934545598565",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-008b36a5a14887833"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:subnet/subnet-026bb03e466ed3dfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026bb03e466ed3dfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "934545598565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "PROVISIONERS_SUBNET"
            },
            "tags_all": {
              "Name": "PROVISIONERS_SUBNET"
            },
            "vpc_id": "vpc-008b36a5a14887833"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:subnet/subnet-0fa5739cf91873faf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa5739cf91873faf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "934545598565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "DOCKER_SUBNET"
            },
            "tags_all": {
              "Name": "DOCKER_SUBNET"
            },
            "vpc_id": "vpc-008b36a5a14887833"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:vpc/vpc-008b36a5a14887833",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0b60a363c251dedb8",
            "default_route_table_id": "rtb-07f53d12a1d21d962",
            "default_security_group_id": "sg-080b7f85c02d0b31c",
            "dhcp_options_id": "dopt-0829490fb161949df",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008b36a5a14887833",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f53d12a1d21d962",
            "owner_id": "934545598565",
            "region": "ap-south-1",
            "tags": {
              "Name": "myproduction_VPC"
            },
            "tags_all": {
              "Name": "myproduction_VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "Prod_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:security-group-rule/sgr-076dfff7c437f576a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "open all outbound",
            "from_port": null,
            "id": "sgr-076dfff7c437f576a",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e7a12ae850ca8cf5",
            "security_group_rule_id": "sgr-076dfff7c437f576a",
            "tags": {
              "Name": "egress rule"
            },
            "tags_all": {
              "Name": "egress rule"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.PROD_sg",
            "aws_vpc.prod_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Prod_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:security-group-rule/sgr-0ee9fe417b0d5c87b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow inbound_ssh",
            "from_port": 22,
            "id": "sgr-0ee9fe417b0d5c87b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e7a12ae850ca8cf5",
            "security_group_rule_id": "sgr-0ee9fe417b0d5c87b",
            "tags": {
              "Name": "1 ingress rule"
            },
            "tags_all": {
              "Name": "1 ingress rule"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.PROD_sg",
            "aws_vpc.prod_VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:security-group-rule/sgr-090f269ed8a5899c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow inbound HTTPS",
            "from_port": 443,
            "id": "sgr-090f269ed8a5899c5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-0e7a12ae850ca8cf5",
            "security_group_rule_id": "sgr-090f269ed8a5899c5",
            "tags": {
              "Name": "2 ingress rule"
            },
            "tags_all": {
              "Name": "2 ingress rule"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.PROD_sg",
            "aws_vpc.prod_VPC"
          ]
        }
      ]
    }
  ]
}